fixed name overflow

--- a/css/slider-trainers.css
+++ b/css/slider-trainers.css
@@ -176,9 +176,10 @@
     font-size: 44px;
     line-height: 54px;
     font-weight: 300;
-    letter-spacing: 0.8;
+    letter-spacing: 0.8px;
     text-transform: uppercase;
     max-width: 288px;
+    word-break: break-word;
 }
   
 .condition__trainer-name > p:nth-child(2) {
